--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div id="main">
       <div class="container-fluid">
         <div id="header">Tic Tac Toe</div>
-        <button id="button" onclick="startGame()">Play</button>
-        <button id="button" onclick="resetGame()">Reset</button>
+        <button id="bnt1" onclick="startGame()">Play</button>
+        <button id="bnt2" onclick="resetGame()">Reset</button>
         <div class="row">
           <div class="col-xs-4 cell" id="c11" onclick="xOrO('c11')"></div>
           <div class="col-xs-4 cell" id="c12" onclick="xOrO('c12')"></div>
